# bssl

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bssl/: __init__.py  bssl.pyi  conf.py  core.pyi  enums.py  err.py  impl.py  socket.py  store.py
bssl-core/: Cargo.toml
bssl-core/src/: bio.rs  buf.rs  cert_compressors.rs  ctx.rs  enums.rs  err.rs  ext.rs  lib.rs  sock.rs  socket.rs  ssl.rs  utils.rs
bssl/base/: __init__.py  buf.py  conf.py  ctx.py  enums.py  err.py  impl.py  socket.py
examples/: aiohttp_connector.py  aiohttp_socks_connector.py  sslproto_patch.py
