[package]
name = "bssl-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "bssl"
crate-type = ["cdylib"]
doctest = false

[dependencies]
boring-sys2 = { version = "5.0.0-alpha.10", features = ["pq-experimental"] }
boring2 = { version = "5.0.0-alpha.10", features = ["pq-experimental"] }
foreign-types = "0.5.0"
rustls-native-certs = "0.8.1"
brotli = "8.0.2"
flate2 = "1.1.2"
zstd = "0.13.3"
pyo3 = { version = "0.26.0", features = ["extension-module", "generate-import-lib"] }
